--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,8 @@
 {
     "name": "mayloncorrea/notafiscalsp",
     "description": "Integração com o WebService da Prefeitura de São Paulo para emissão de NFS e NTFS utilizando a API da nota do milhão",
+    "type": "library",
+    "license": "MIT",
     "require": {
         "robrichards/xmlseclibs": "^3.0",
         "greenter/xmldsig": "^5.0",
@@ -20,7 +22,6 @@
         "Prefeitura São Paulo",
         "Nota Fiscal Tomador de Serviços"
     ],
-    "license": "MIT",
     "authors": [
         {
             "name": "Kaio Valdemar",
@@ -29,14 +30,11 @@
     ],
     "autoload": {
         "psr-4": {
-            "NotaFiscalSP\\": "src/"
+            "NotaFiscalSP\\": "src"
         }
     },
     "require-dev": {
         "phpunit/phpunit": ">=7.0"
-    },
-    "scripts": {
-        "test": "vendor/bin/phpunit"
     },
     "minimum-stability": "stable"
 }
