--- a/composer.json
+++ b/composer.json
@@ -25,7 +25,7 @@
     "authors": [
         {
             "name": "Kaio Valdemar",
-            "email": "kaio@e-htl.com.br"
+            "email": "profkaio@outlook.com"
         }
     ],
     "autoload": {
