--- a/composer.json
+++ b/composer.json
@@ -28,7 +28,7 @@
             "email": "profkaio@outlook.com"
         },
         {
-            "name": "Marcelo Mendonça da Silva (marceloms163)",
+            "name": "Marcelo Mendonça da Silva (marceloms163)"
         }
     ],
     "autoload": {
