--- a/composer.json
+++ b/composer.json
@@ -29,7 +29,7 @@
             "email": "kaio@e-htl.com.br"
         },
         {
-            "name": "Marcelo Mendonça da Silva (marceloms163)",
+            "name": "Marcelo Mendonça da Silva (marceloms163)"
         }
     ],
     "autoload": {
